--- a/todo/src/stylesheets/App.css
+++ b/todo/src/stylesheets/App.css
@@ -36,3 +36,105 @@
     transform: rotate(360deg);
   }
 }
+
+.main-div {
+  height: 100vh;
+  width: 90vw;
+  padding: 5%;
+  background-color: black;
+  color: white;
+}
+
+.main-h1 {
+  font-size: 3.6rem;
+}
+
+.todo-div {
+  margin: 2vh 2vw;
+}
+
+.todo-label {
+  display: inline-block;
+  width: 50vw;
+  font-size: 2.4rem;
+  margin-left: 2vw;
+}
+
+.strikeThru {
+  text-decoration: line-through;
+  color: grey;
+}
+
+.todo-span {
+  margin: 0 20px;
+}
+
+.overdue {
+  color: red;
+}
+
+.button {
+  border-radius:3px;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:1.5rem;
+  padding:9px 23px;
+  text-decoration:none;
+}
+
+.button:active {
+    position:relative;
+    top:1px;
+}
+
+.blueButton {
+  box-shadow:inset 0px -3px 7px 0px #29bbff;
+  background:linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+  background-color:#2dabf9;
+  border:1px solid #0b0e07;
+  text-shadow:0px 1px 0px #263666;
+}
+
+.blueButton:hover {
+    background:linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
+    background-color:#0688fa;
+}
+
+.redButton {
+  box-shadow:inset 0px -3px 7px 0px #781f1f;
+  background:linear-gradient(to bottom, #f72e2e 5%, #4d0808 100%);
+  background-color:#f72e2e;
+  border:1px solid #0d060a;
+  text-shadow:0px 1px 0px #662727;
+  margin-top: 2vh;
+}
+
+.redButton:hover {
+    background:linear-gradient(to bottom, #4d0808 5%, #f72e2e 100%);
+    background-color:#4d0808;
+}
+
+.todoForm-input {
+  height: 2.4rem;
+  font-size: 2rem;
+  margin-right: 2vw;
+}
+
+.todoHeader-div {
+  margin: 2vh 2vw;
+}
+
+.todoHeader-h2 {
+  display: inline-block;
+  width: 50vw;
+  font-size: 2.6rem;
+  margin-left: 4vw;
+}
+
+.todoHeader-h3 {
+  display: inline-block;
+  font-size: 2.6rem;
+  margin: 0 20px;
+}
